hphp/hack/test/typecheck/modules/case_insensitive.php.exp
File "case_insensitive.php--A.php", line 6, characters 3-3:
Cannot access an internal element from module `a` in module `A` (Typing[4444])
  File "case_insensitive.php--a.php", line 6, characters 19-19:
  This is from module `a`
File "case_insensitive.php--b.php", line 3, characters 8-8:
Unbound name: `b` (a module) (Naming[2049])
